[gd_scene load_steps=8 format=3 uid="uid://byf4nkgylxsx8"]

[ext_resource type="Script" path="res://Units/combatUnit.gd" id="1_riq1d"]
[ext_resource type="Texture2D" uid="uid://gj6oxdy6j3vw" path="res://Assets/Units/tile_0096.png" id="2_kwky2"]
[ext_resource type="Texture2D" uid="uid://cd7k7sm337pnn" path="res://Assets/Units/tile_0112.png" id="3_6mxvg"]
[ext_resource type="PackedScene" uid="uid://dyewi7ipnw4vu" path="res://Global/Health Bars/BasicHealthBar.tscn" id="4_vx3ww"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w604s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4s4rt"]
bg_color = Color(0, 0.658824, 0.854902, 0.227451)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0.658824, 0.854902, 0.752941)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="LabelSettings" id="LabelSettings_o23ut"]
font_size = 10

[node name="CombatUnit" type="CharacterBody2D"]
script = ExtResource("1_riq1d")

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_w604s")

[node name="SwordUnit" type="Sprite2D" parent="Collision"]
visible = false
position = Vector2(0, 1)
texture = ExtResource("2_kwky2")

[node name="BowUnit" type="Sprite2D" parent="Collision"]
visible = false
position = Vector2(0, 1)
texture = ExtResource("3_6mxvg")

[node name="SelectedPanel" type="Panel" parent="."]
visible = false
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
theme_override_styles/panel = SubResource("StyleBoxFlat_4s4rt")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -13.0
offset_top = -28.0
offset_right = 13.0
offset_bottom = -14.0
text = "SAFE"
label_settings = SubResource("LabelSettings_o23ut")

[node name="BasicHealthBar" parent="." instance=ExtResource("4_vx3ww")]
z_index = 20
offset_left = -8.0
offset_top = -9.0
offset_right = 8.0
offset_bottom = -7.0
value = 100.0
